crates/monochange_integration_tests/tests/snapshots/prerelease_workflow__prerelease_notes_delta_second_run.snap
---
source: crates/monochange_integration_tests/tests/prerelease_workflow.rs
expression: "json!({\n    \"release_targets\": second[\"release_targets\"], \"notes\":\n    notes_from(&second, \"core\", \"release\"),\n})"
---
{
  "notes": null,
  "release_targets": [
    {
      "id": "app",
      "kind": "package",
      "members": [
        "app"
      ],
      "release": true,
      "rendered_changelog_title": "app [1.0.1-alpha.1](https://github.com/ifiokjr/monochange/releases/tag/app/v1.0.1-alpha.1) (2026-04-07)",
      "rendered_title": "app v1.0.1-alpha.1 (2026-04-07)",
      "tag": false,
      "tag_name": "app/v1.0.1-alpha.1",
      "version": "1.0.1-alpha.1",
      "version_format": "namespaced"
    },
    {
      "id": "core",
      "kind": "package",
      "members": [
        "core"
      ],
      "release": true,
      "rendered_changelog_title": "core [1.1.0-alpha.1](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0-alpha.1) (2026-04-07)",
      "rendered_title": "core v1.1.0-alpha.1 (2026-04-07)",
      "tag": true,
      "tag_name": "core/v1.1.0-alpha.1",
      "version": "1.1.0-alpha.1",
      "version_format": "namespaced"
    }
  ]
}
